# translate_cpp

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  ConvertNumberToWord.cpp  ConvertNumberToWord.h  Translate.cpp
